# project-lang

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  example.lang
src/lang/: CMakeLists.txt  fwd.h  token_type.h
src/lang/ast/: expression.h  node.hpp  program.h  statement.h  visitor.h
src/lang/ast/enums/: binary_operation.h  unary_operation.h
src/lang/ast/expr/: binary_expression.cpp  binary_expression.h  function_call_expression.cpp  function_call_expression.h  literal.h  unary_expression.cpp  unary_expression.h  variable_expression.cpp  variable_expression.h
src/lang/ast/expr/lit/: int_literal.h
src/lang/ast/stmt/: assignment_statement.cpp  assignment_statement.h  block_statement.cpp  block_statement.h  function_call_statement.cpp  function_call_statement.h  function_define_node.cpp  function_define_node.h  if_else_statement.cpp  if_else_statement.h  if_statement.cpp  if_statement.h  return_statement.cpp  return_statement.h  variable_declare_statement.cpp  variable_declare_statement.h  while_statement.cpp  while_statement.h
src/lang/ast/visitors/: ast_printer.cpp  ast_printer.h  hlir_generator.cpp  hlir_generator.h  interpreter.cpp  interpreter.h
src/lang/backend/: backend.h
src/lang/backend/hlir/: generator.hpp
src/lang/backend/llir/: generator.hpp
src/lang/context/: lang_context.h
src/lang/diag/list/: constraints.h  interpreter.h  syntax.h
src/lang/enums/: binary_operation.h  rule_type.h  token_type.h
src/lang/frontend/: frontend.h
src/lang/frontend/analyzer/: static_constraints_stage.hpp
src/lang/frontend/cli/: command_line_args_stage.hpp
src/lang/frontend/interpreter/: interpreter_stage.hpp
src/lang/frontend/lexer/: regex_lexer.hpp
src/lang/frontend/parser/: ll_parser.hpp  recursive_descent_parser.hpp
src/lang/frontend/tokens_filter/: tokens_filter.hpp
src/lang/hlir/: expression.h  node.hpp  visitor.h
src/lang/hlir/expr/: literal.h
src/lang/hlir/expr/lit/: int_literal.cpp  int_literal.h
src/lang/hlir/visitors/: hlir_printer.cpp  hlir_printer.h  llir_generator.cpp  llir_generator.h
src/lang/limits/: constraints.h
src/lib/lang/: CMakeLists.txt  consts.h  fwd.h  macros.h  source_desc.h  types.hpp
src/lib/lang/asm/: unit.hpp
src/lib/lang/asm/gas_x86_64/: directive.h  dst_src_op.h  fwd.h  instruction.h  label.h  line.h  memory.cpp  memory.h  operand.cpp  operand.h  visitor.h
src/lib/lang/backend/asm/: generator.hpp
src/lib/lang/backend/hlir/: generator.hpp
src/lib/lang/backend/llir/: generator.hpp
src/lib/lang/cfg/: basic_block.cpp  basic_block.h  control_flow_graph.cpp  control_flow_graph.h
src/lib/lang/context/: base_context.h  consts.h
src/lib/lang/cst/: node.hpp  rule.hpp
src/lib/lang/cst/nodes/: rule_node.h  token_node.h
src/lib/lang/cst/rules/: token_rule.h
src/lib/lang/diag/: diag.cpp  diag.h  diag_engine.cpp  diag_engine.h  render_context.h
src/lib/lang/diag/list/: all.h  file.h  lexer.h  list.h  source.h
src/lib/lang/engines/: diagnostics.cpp  diagnostics.h  sources.cpp  sources.h  symbols.cpp  symbols.h
src/lib/lang/errors/: errors.cpp  errors.h
src/lib/lang/frontend/: tokens.hpp
src/lib/lang/frontend/file_reader/: file_reader.hpp
src/lib/lang/frontend/lexer/: lexer.h  lexer.hpp
src/lib/lang/frontend/parser/: parser.hpp
src/lib/lang/frontend/read_file/: read_file.hpp
src/lib/lang/frontend/tokens_filter/: tokens_filter.hpp
src/lib/lang/llir/: instruction.hpp  instruction_sequence.cpp  instruction_sequence.h  visitor.h
src/lib/lang/llir/instructions/: load_int64.h
src/lib/lang/llir/visitors/: instruction_stringifier.cpp  instruction_stringifier.h
src/lib/lang/render/: context.h  line_highlight.cpp  line_highlight.h  line_span.cpp  line_span.h  span.cpp  span.h
src/lib/lang/source/: file.cpp  file.h  index.cpp  index.h  line_column.cpp  line_column.h  line_column_length.cpp  line_column_length.h  path.cpp  path.h  program.cpp  program.h  source.cpp  source.h  span.cpp  span.h  token.hpp
src/lib/lang/src/: file.cpp  file.h  index.cpp  index.h  line_column.cpp  line_column.h  line_column_length.cpp  line_column_length.h  path.cpp  path.h  source.cpp  source.h  span.cpp  span.h  token.hpp
src/lib/lang/stats/src/: analyzer.h  stats.h
src/lib/lang/structure/: function.cpp  function.h  instruction_sequence.cpp  instruction_sequence.h  module.cpp  module.h
src/lib/lang/symbols/: consts.h  descriptor.cpp  descriptor.h  enums.h  scope.cpp  scope.h
src/lib/lang/symbols/descriptors/: function_descriptor.h  local_value_descriptor.h  stack_value_descriptor.h  temp_variable_descriptor.h  value_descriptor.h
src/lib/lang/symbols/scopes/: function_scope.h  global_scope.h
src/lib/regex/: CMakeLists.txt  consts.h  errors.cpp  errors.h  fwd.h
src/lib/regex/algo/: matcher.cpp  matcher.h
src/lib/regex/algo/dfa/: builder.cpp  builder.h  matcher.cpp  (+1 more)
src/lib/regex/ast/: all.h  char_class_node.cpp  char_class_node.h  char_node.h  char_set_node.cpp  char_set_node.h  choice_node.h  node.h  nodes_base_node.cpp  nodes_base_node.h  repeat_node.cpp  repeat_node.h  sequence_node.h  wide_char_node.h
src/lib/regex/compiler/: compiler.cpp  compiler.h
src/lib/regex/dfa/: dfa.cpp  dfa.h  dfa_wrapper.cpp  dfa_wrapper.h  state.cpp  state.h  state_wrapper.cpp  state_wrapper.h
src/lib/regex/errors/: errors.cpp  errors.h
src/lib/regex/fa/: fa.hpp  fa_wrapper.hpp  state.cpp  state.h  state_wrapper.hpp
src/lib/regex/nfa/: data.cpp  data.h  data_wrapper.cpp  data_wrapper.h  nfa.cpp  nfa.h  nfa_wrapper.cpp  nfa_wrapper.h  state.cpp  state.h  state_wrapper.cpp  state_wrapper.h
src/lib/regex/parser/: error_state.h  parser.cpp  parser.h  parser_base.h
src/lib/regex/utils/: indentable.cpp  indentable.h  utils.cpp  utils.h
src/lib/regex/visitors/: ast_printer.cpp  ast_printer.h  formatter.cpp  formatter.h  nfa_builder.cpp  nfa_builder.h  visitor.h
tests/: CMakeLists.txt
tests/lang/: CMakeLists.txt  test_lang.cpp
tests/lib/regex/: CMakeLists.txt  test_ast_nodes.cpp  test_ast_printer.cpp  test_formatter.cpp  test_matchers.cpp  test_nfa.cpp  test_parser_errors.cpp  utils.h
(+58 files in other folders)
